# Quiz-Forge

./: .gitignore  CLAUDE.md  ContestForge_PRD_v1.md  README.md  docker-compose.yml  infra.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: cli.py  config.py  db.py  dependencies.py  main.py  redis_client.py
backend/app/middleware/: errors.py  logging.py  request_logging.py  tenant_context.py
backend/app/models/: __init__.py  answer.py  base.py  configuration_block.py  contest.py  elimination.py  execution.py  foundation_probe.py  group.py  organization.py  question.py  registration.py  score.py  tenant_usage.py  user.py  wildcard_activation.py  wildcard_config.py
backend/app/observability/: method_logging.py  tracing.py
backend/app/realtime/: __init__.py  gateway.py  tickets.py
backend/app/routers/: auth.py  configurations.py  contests.py  control.py  groups.py  health.py  leaderboard.py  live.py  organizations.py  questions.py  registrations.py  users.py  wildcards.py
backend/app/schemas/: answer.py  auth.py  configuration.py  contest.py  execution.py  group.py  leaderboard.py  live.py  organization.py  pagination.py  question.py  registration.py  user.py  wildcard.py
backend/app/security/: passwords.py  tokens.py
backend/app/services/: answer_service.py  auth_service.py  configuration_service.py  contest_service.py  execution_service.py  group_service.py  leaderboard_service.py  live_service.py  organization_service.py  question_service.py  (+5 more)
backend/migrations/: env.py
backend/tests/: conftest.py
(+266 files in other folders)
